# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = wrpy
version = 0.1.0
description = Get translations from WordReference.
long_description = file: README.md
long_description_content_type = text/markdown
author = Sergio Delgado Quintero
author_email = sdelquin@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    # https://pypi.org/classifiers/
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Home Automation
    Topic :: Internet
    Topic :: Software Development :: Localization
    Topic :: Text Processing
    Topic :: Text Processing :: Linguistic
    Topic :: Utilities
download_url = https://github.com/sdelquin/wrpy
keywords = translation tools wordreference automation productivity
project_urls =
    Issue Tracker=https://github.com/sdelquin/wrpy/issues
    Documentation=https://github.com/sdelquin/wrpy/blob/main/README.md
    Source Code=https://github.com/sdelquin/wrpy

[options]
packages = wrpy
python_requires = >=3.6
